--- a/src/kendoTuto/wwwroot/Index.html
+++ b/src/kendoTuto/wwwroot/Index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="utf-8" />
     <title></title>
+    <link href="lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
+    <link rel="stylesheet" href="http://kendo.cdn.telerik.com/2017.1.118/styles/kendo.common.min.css" />
+    <link rel="stylesheet" href="http://kendo.cdn.telerik.com/2017.1.118/styles/kendo.blueopal.min.css" />
 </head>
 <body ng-app="app">
     <header class="navbar navbar-nav navbar-default navbar-fixed-top">
@@ -22,5 +25,18 @@
 
         </div>
     </div>
+
+    <script src="lib/jquery/dist/jquery.js"></script>
+    <script src="lib/bootstrap/dist/js/bootstrap.js"></script>
+    <script src="lib/jquery-validation/dist/jquery.validate.js"></script>
+    <script src="lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
+    <script src="lib/angular/angular.js"></script>
+    <script src="http://kendo.cdn.telerik.com/2017.1.118/js/kendo.all.min.js"></script>
+    <script src="app/app.js"></script>
+    <script src="app/app.route.js"></script>
+    <script src="app/grid/controllers/grid.controller.js"></script>
+    <script src="app/grid/services/grid.service.js"></script>
+    <script src="app/grid/viewmodels/employee.js"></script>
+    <script src="app/grid/viewmodels/order.js"></script>
 </body>
 </html>
