--- a/src/kendoTuto/wwwroot/Index.html
+++ b/src/kendoTuto/wwwroot/Index.html
@@ -17,7 +17,8 @@
                <div class="navbar-collapse collapse">
                    <nav class="navbar-logo">
                        <ul class="nav navbar-nav">
-                           <li><a ng-href="#/grid"><span class="glyphicon glyphicon-home"></span>Grid</a></li>
+                           <li><a ng-href="#/grid"> <span class="glyphicon glyphicon-home"> </span>Grid</a></li>
+                           <li><a ng-href="#/grid1"> <span class="glyphicon glyphicon-home"> </span>Grid'CRUD</a></li>
                        </ul>
                    </nav>
                </div>
@@ -42,5 +43,7 @@
     <script src="app/grid/services/grid.service.js"></script>
     <script src="app/grid/viewmodels/employee.js"></script>
     <script src="app/grid/viewmodels/order.js"></script>
+    <script src="app/grid1/services/grid1.service.js"></script>
+    <script src="app/grid1/controllers/grid1.controller.js"></script>
 </body>
 </html>
